--- a/index.html
+++ b/index.html
@@ -147,8 +147,19 @@
                 </div>
             </div>
         </section>
+                                    <!-- section five -->
+        <section class="form-area">
+            <form>
+                <H2>Contact Us</H2>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem vero eaque obcaecati neque, facilis rem amet distinctio nulla quam eveniet ratione asperiores at ab modi excepturi! Nesciunt, nisi sed?</p>
 
+                <input class="form-input" type="text" placeholder="Your Name" required>
+                <input class="form-input" type="email" placeholder="Your Mail" required>
+                <input class="form-input" type="text" placeholder="Your Message">
 
+                <input class="sub-form"  type="submit" value="SUBMIT">
+            </form>
+        </section>
 
     </main>
 
