--- a/index.html
+++ b/index.html
@@ -161,6 +161,46 @@
             </form>
         </section>
 
+                                                <!-- section six  -->
+
+
+
+        <section class="section-six">
+            <div class="Uncommit-parent">
+                <div class="br"> 
+                    <H2>Uncommit. <br> Services. <br> Unmatched. <br> Excellence.</H2>
+                </div>
+                <fieldset class="match">
+                    <legend><i class="fa-solid fa-trailer"></i></legend>
+                    <h3>LAND FREIGHT</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit nisi quo voluptatum numquam dolores, ullam voluptatibus molestias, provident sequi nam nemo. Deserunt eum eaque aliquam soluta alias esse! Suscipit, iure.</p>
+                </fieldset>
+                <fieldset class="match">
+                    <legend><i class="fa-solid fa-ship"></i></legend>
+                    <h3>SEA FREIGHT</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit nisi quo voluptatum numquam dolores, ullam voluptatibus molestias, provident sequi nam nemo. Deserunt eum eaque aliquam soluta alias esse! Suscipit, iure.</p>
+                </fieldset>
+                <fieldset class="match">
+                    <legend><i class="fa-solid fa-plane-departure"></i></legend>
+                    <h3>AIR FREIGHT</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit nisi quo voluptatum numquam dolores, ullam voluptatibus molestias, provident sequi nam nemo. Deserunt eum eaque aliquam soluta alias esse! Suscipit, iure.</p>
+                </fieldset>
+                <fieldset class="match">
+                    <legend><i class="fa-solid fa-cart-flatbed"></i>
+                    </legend>
+                    <h3>PROJECT CARGO</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit nisi quo voluptatum numquam dolores, ullam voluptatibus molestias, provident sequi nam nemo. Deserunt eum eaque aliquam soluta alias esse! Suscipit, iure.</p>
+                </fieldset>
+                
+                <fieldset class="match">
+                    <legend><i class="fa-solid fa-truck-fast"></i></legend>
+                    <h3>SHIPPING AGENCY</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit nisi quo voluptatum numquam dolores, ullam voluptatibus molestias, provident sequi nam nemo. Deserunt eum eaque aliquam soluta alias esse! Suscipit, iure.</p>
+                </fieldset>
+
+
+            </div>
+        </section>                                            
     </main>
 
                                         
