--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Responsive</title>
     <link rel="stylesheet" href="style.css"><script src="https://kit.fontawesome.com/54a6453915.js" crossorigin="anonymous"></script>
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+    <link rel="manifest" href="favicon/site.webmanifest">
+
 </head>
 <body>
     <nav class="main">
@@ -86,7 +91,7 @@
 
 
 
-        <section class="section-three"> 
+         <section class="section-three"> 
             <div class="parent-three">
                 <div class="vanilla">
                     <H4>More about vanilla</H4>
@@ -120,9 +125,9 @@
                 </div>
             </div>
            
-        </section>
+        </section> 
 
-        <section class="section-four">
+         <section class="section-four">
             <div class="listen-section-parents">
                 <div class="single-listen">
                    <div class="listen-img">
@@ -146,7 +151,7 @@
                     <a href="">Learn More</a>
                 </div>
             </div>
-        </section>
+        </section> 
                                     <!-- section five -->
         <section class="form-area">
             <form>
@@ -159,7 +164,7 @@
 
                 <input class="sub-form"  type="submit" value="SUBMIT">
             </form>
-        </section>
+        </section> 
 
                                                 <!-- section six  -->
 
